Added initial working example

--- a/example/index.html
+++ b/example/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
+
+    <meta charset="UTF-8" />
+    <title>Angularise Example</title>
+
+    <!-- Dependencies! -->
+    <script type="text/javascript" src="vendor/angular/angular.js"></script>
+    <script type="text/javascript" src="vendor/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="vendor/angularise/angularise.js"></script>
+
+    <!-- Application! -->
+    <script type="text/javascript" src="js/App.js"></script>
+
+    <!-- Styling! -->
+    <link rel="stylesheet" type="text/css" href="css/Default.css" />
+
 </head>
-<body>
+<body ng-app="exampleApp">
+
+    <inception>Inception-ify</inception>
 
 </body>
 </html>
