Added safe () invocation

--- a/example/index.html
+++ b/example/index.html
@@ -17,9 +17,11 @@
     <link rel="stylesheet" type="text/css" href="css/Default.css" />
 
 </head>
-<body ng-app="exampleApp">
+<body ng-app="exampleApp" ng-controller="InceptionController">
 
-    <inception>Inception-ify</inception>
+{{index}}
+
+    <inception>Inception-ify &mdash; {{index}}</inception>
 
 </body>
 </html>
